Upgarde svelte to v1.0

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>svelte-vertical-timeline</title>
 		<description>Svelte components for creating a vertical timeline.</description>
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
 		<a
@@ -60,6 +60,6 @@
 				}
 			}
 		</style>
-		<div>%svelte.body%</div>
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
